--- a/app/src/main/res/layout/activity_scale_ingredients.xml
+++ b/app/src/main/res/layout/activity_scale_ingredients.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddIngredients">
+    tools:context=".ScaleIngredients">
 
     <LinearLayout
         android:id="@+id/vlAddIngredient"
@@ -14,46 +14,66 @@
         android:orientation="vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingBottom="20dp">
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true">
 
-        <TextView
-            android:id="@+id/tvScaleIngredients"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text="Scale Amount"
-            android:textColor="#E3E1E1"
-            android:textSize="35dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_scale_ingredients"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Multiply Recipes"
+                android:textColor="#E3E1E1"
+                android:textSize="30sp" />
+
+        </LinearLayout>
 
         <ScrollView
-            android:id="@+id/scroll_add_ingredients"
+            android:id="@+id/scroll_"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#636C6A6A">
+            android:background="#636C6A6A"
+            android:scrollbarStyle="insideOverlay">
 
-            <TableLayout
+
+            <LinearLayout
+                android:id="@+id/verticalLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <TableRow
+                <Space
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </TableLayout>
         </ScrollView>
 
-    </LinearLayout>
+        <EditText
+            android:id="@+id/et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FFFFFF"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:textColor="#EDE2E2"
+            android:textColorHighlight="#E3E1E1"
+            android:textSize="24sp" />
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FA4343"
+            android:text="Add Recipe" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
