added menue to scale page

--- a/app/src/main/res/layout/activity_add_ingredients.xml
+++ b/app/src/main/res/layout/activity_add_ingredients.xml
@@ -51,6 +51,7 @@
                             android:layout_height="wrap_content"
                             android:isScrollContainer="true"
                             android:paddingBottom="20dp"
+                            android:scrollbars="none"
                             android:text="Recipe"
                             android:textColor="#E3E1E1"
                             android:textSize="25sp" />
