--- a/app/src/main/res/layout/activity_scale_ingredients.xml
+++ b/app/src/main/res/layout/activity_scale_ingredients.xml
@@ -42,7 +42,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tv_scale_recipe_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
